Add tests for validation and extract command from Main